--- a/ui/src/components/MediaLockup/Lockup02SplitRight.html
+++ b/ui/src/components/MediaLockup/Lockup02SplitRight.html
@@ -1,16 +1,19 @@
 <link rel="stylesheet" href="./MediaLockup.css">
 
 <!-- Lockup 02: Split 50/50 - Image Right -->
-<div class="media-lockup media-lockup--split-right">
-  <div class="media-lockup__content">
-    <h2 class="media-lockup__heading">Split 50/50 Right</h2>
-    <p class="media-lockup__subheading">Content left, image right</p>
-    <p class="media-lockup__body">
-      Reverse split layout with content on the left and image on the right. Mobile stacks content first, then image.
-      Great for alternating sections on a page.
-    </p>
+<!-- Uses Section + l-container + l-split-half + l-reverse-desktop layout tokens -->
+<section class="section">
+  <div class="media-lockup media-lockup--split-right l-container l-split-half l-reverse-desktop">
+    <div class="media-lockup__content">
+      <h2 class="media-lockup__heading">Split 50/50 Right</h2>
+      <p class="media-lockup__subheading">Content left, image right</p>
+      <p class="media-lockup__body">
+        Reverse split layout with content on the left and image on the right. Mobile stacks content first, then image.
+        Great for alternating sections on a page. Built with Section + layout tokens.
+      </p>
+    </div>
+    <div class="media-lockup__image">
+      <img src="https://picsum.photos/800/600?random=2" alt="Split layout with image on right">
+    </div>
   </div>
-  <div class="media-lockup__image">
-    <img src="https://picsum.photos/800/600?random=2" alt="Split layout with image on right">
-  </div>
-</div>
+</section>
